examples/typechecking/impredicativity.an

id x = x

ids = [freeze id]

auto (x: forall a. fn a -> a) = x (freeze x)

auto_prime (x: forall a. fn a -> a) = x x

f5 = auto (freeze id)

// bad f =
//     f 42, f true  // error expected

poly (f: forall a. fn a -> a) =
    f 42, f true

f9 =
    f = revapp (freeze id)
    f poly

choose (x: a) (y: a) = x

a5 = id auto
a6 = id auto_prime
a6_ = id (freeze auto_prime)

a7 = choose id auto

// args: -e ast-t --no-color
// expected exit status: 1
// expected stdout:
// (id: fn _ -> _) (x: _) = (x: _)
// 
// (ids: _) = (error)
// 
// (auto: fn (error) -> _) ((x: (error))) = (x: (error)) (error)
// 
// (auto_prime: fn (error) -> _) ((x: (error))) = (x: (error)) (x: (error))
// 
// (f5: _) = (auto: fn (error) -> _) (error)
// 
// (poly: fn (error) -> _, _) ((f: (error))) =
//     (f: (error)) 42 (,: fn _ _ -> _, _) (f: (error)) true
// 
// (f9: _) =
//     (f: fn (fn (error) -> _, _) [_] -> _) = (revapp: (error)) (error)
//     (f: fn (fn (error) -> _, _) [_] -> _) (poly: fn (error) -> _, _)
// 
// (choose: fn a a -> a) ((x: a)) ((y: a)) = (x: a)
// 
// (a5: fn (error) -> _) = (id: fn (fn (error) -> _) -> fn (error) -> _) (auto: fn (error) -> _)
// 
// (a6: fn (error) -> _) = (id: fn (fn (error) -> _) -> fn (error) -> _) (auto_prime: fn (error) -> _)
// 
// (a6_: _) = (id: fn _ -> _) (error)
// 
// (a7: fn (error) -> (error)) = (choose: fn (fn (error) -> (error)) (fn (error) -> (error)) -> fn (error) -> (error)) (id: fn (error) -> (error)) (auto: fn (error) -> (error))

// expected stderr:
// examples/typechecking/impredicativity.an:4:8
// 4 | ids = [freeze id]	// error: Expected an expression but found `freeze`
//   |        ^^^^^^
// 
// examples/typechecking/impredicativity.an:6:10
// 6 | auto (x: forall a. fn a -> a) = x (freeze x)	// error: Expected a type but found `forall`
//   |          ^^^^^^
// 
// examples/typechecking/impredicativity.an:6:36
//   | // error: Expected an expression but found `freeze`
// 6 | auto (x: forall a. fn a -> a) = x (freeze x)
//   |                                    ^^^^^^
// 
// examples/typechecking/impredicativity.an:8:16
//  8 | auto_prime (x: forall a. fn a -> a) = x x	// error: Expected a type but found `forall`
//    |                ^^^^^^
// 
// examples/typechecking/impredicativity.an:10:12
// 10 | f5 = auto (freeze id)	// error: Expected an expression but found `freeze`
//    |            ^^^^^^
// 
// examples/typechecking/impredicativity.an:15:10
// 15 | poly (f: forall a. fn a -> a) =	// error: Expected a type but found `forall`
//    |          ^^^^^^
// 16 |     f 42, f true
// 
// examples/typechecking/impredicativity.an:19:9
// 18 | f9 =
// 19 |     f = revapp (freeze id)	// error: `revapp` not found in scope
//    |         ^^^^^^
// 20 |     f poly
// 
// examples/typechecking/impredicativity.an:19:17
// 18 | f9 =
// 19 |     f = revapp (freeze id)	// error: Expected an expression but found `freeze`
//    |                 ^^^^^^
// 20 |     f poly
// 
// examples/typechecking/impredicativity.an:26:11
// 25 | a6 = id auto_prime
// 26 | a6_ = id (freeze auto_prime)	// error: Expected an expression but found `freeze`
//    |           ^^^^^^
// 
// Found 9 errors and 0 warnings
